Add action to deploy the WASM toy to GH pages

--- a/wasm/Makefile
+++ b/wasm/Makefile
@@ -4,3 +4,7 @@ build:
 run: build
 	npm install
 	node index.js
+
+pages: build 
+	mkdir static
+	cp index.html index.js letgo.wasm wasm_exec.js static
