--- a/wasm/Makefile
+++ b/wasm/Makefile
@@ -1,5 +1,8 @@
+GOROOT := $(shell go env GOROOT)
+
 build:
 	GOOS=js GOARCH=wasm go build -o letgo.wasm .
+	cp "$(GOROOT)/misc/wasm/wasm_exec.js" .
 
 run: build
 	npm install
