--- a/wasm/package.json
+++ b/wasm/package.json
@@ -1,6 +1,6 @@
 {
-    "dependencies": {
-        "fastify": "^3.6.0",
-        "fastify-static": "^3.2.1"
-    }
+  "dependencies": {
+    "@fastify/static": "^6.5.1",
+    "fastify": "^4.10.2"
+  }
 }
